Sync script loading, KConfGroup is not thread safe

REVIEW: 106377
BUG: 305361
FIXED-IN: 4.9.2